--- a/index.html
+++ b/index.html
@@ -15,7 +15,44 @@
         <br>
         Как дела?
         <p>Это мой первый сайт</p>
-        <p> jfjfjfjfj</p>
+        <b>Жирный тект</b>
+        <p>
+            <del>Зачеркнутый текст</del>
+        </p>
+        <p></p>
+        <i>Текст курсивом</i>
+        <p>
+            <small>Текст меньше размером</small>
+        </p>
+
+        <p> 
+            <u>Подчеркнутый текст</u>
+        </p>
+            <h2>Нумерованный список
+                <ol style="color: rgb(25, 92, 180); shape-image-threshold: inherit;" >
+                    <li>Iphone</li>
+                    <li>Galaxy</li>
+                    <li>Sony</li>
+                    <li>One pluse</li>
+
+
+                </ol>
+            </h2>
+        <h2>Ненумерованный список
+            <details>
+                <summary>
+                    <ul>
+                        <li>jcjc</li>
+                        <li>blblbl</li>
+                        <li>lglglgl</li>
+
+
+
+                    </ul>
+                </summary>
+            </details>
+        </h2>
+        <p>X<sub>i</sub> = Y<sub>2</sub> + Z<sub>2</sub>2<su</p>
         <p><a href="https://google.com"> Посмотри на этот сайт</a> </p>
     </body>
 <p></p>
