--- a/index.html
+++ b/index.html
@@ -2,10 +2,27 @@
 <html lang="ru">
     <head>
         <title>Главная страница</title>
+        <style> 
+           td, th { 
+           border: solid 1px purple;
+         } 
+         table {
+            border-collapse: collapse;
+            width: 50%; 
+        }
+           
+            
+
+        </style>
 
     </head>
     <body>
         <h1>Header 1</h1>
+        <a href="#table-1"> <img src="img/download (1).png" alt="Котик"/>
+
+        </a>
+
+
         <h2>Header 2</h2>
         <h3>Header 3</h3>
         <h4>Header 4</h4>
@@ -54,6 +71,40 @@
         </h2>
         <p>X<sub>i</sub> = Y<sub>2</sub> + Z<sub>2</sub>2<su</p>
         <p><a href="https://google.com"> Посмотри на этот сайт</a> </p>
+        <img src="img/download (1).png" alt="Котик"/>
+
+        <table id="table-1" class="table-1">
+            <thead>
+                <tr>
+                    <th>Имя</th>
+                    <th>Фамилия</th>
+                    <th>Телефон</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Максим</td>
+                    <td>Одуванчиков</td>
+                    <td>8888888888</td>
+                </tr>
+
+
+                <tr>
+                    <td>Ксения</td>
+                    <td>Яблочникова</td>
+                    <td>66666666666</td>
+                </tr>
+
+
+                <tr>
+                    <td>Арина</td>
+                    <td>Лампочка</td>
+                    <td>999999999</td>
+                </tr>
+            </tbody>
+
+        </table>
+
     </body>
 <p></p>
 </html>
